--- a/index.html
+++ b/index.html
@@ -2,22 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
     <header>
      <nav>
-         <a href="#">Home</a>
-         <span></span>
-         <a class="bordered" href="#">About</a>
+         <div class="links">
+            <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+         <a href="#home">Home</a>
+         <span> </span>
+         <a href="#">About</a>
          <span></span> 
+        
          <a href="#">Contact</a>
+        </div>
      </nav>    
     </header>
     <section class="title-container">
         <div>
+            <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
             <h1>50 Influential<br>Artists</h1>
             <button>Contact Us</button>
         </div>  
